--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,18 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/node": "^22.0.0",
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
+    "autoprefixer": "^10.4.0",
+    "better-auth": "^1.0.0",
+    "eslint": "^9.0.0",
+    "eslint-config-next": "^16.1.4",
+    "next": "^16.1.4",
+    "postcss": "^8.4.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "16.0.0",
-    "@types/react": "^19.0.0",
-    "@types/node": "^22.0.0",
-    "@types/react-dom": "^19.0.0",
-    "typescript": "^5.0.0",
-    "better-auth": "^1.0.0",
     "tailwindcss": "^3.4.0",
-    "autoprefixer": "^10.4.0",
-    "postcss": "^8.4.0",
-    "eslint": "^9.0.0",
-    "eslint-config-next": "16.0.0"
+    "typescript": "^5.0.0"
   }
 }
